[gd_scene load_steps=2 format=3 uid="uid://8v1xjxdn6brq"]

[ext_resource type="Script" path="res://src/ui/upgrade_card.gd" id="1_c81pv"]

[node name="UpgradeCard" type="PanelContainer"]
script = ExtResource("1_c81pv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "title"

[node name="ButtonBuy" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "0"

[connection signal="pressed" from="VBoxContainer/ButtonBuy" to="." method="_on_button_buy_pressed"]
